# test-monitor-dashboard

./: README.md  app.py  dashboard_plugin.py  data_generator.py  pyproject.toml
tests/: test_plugin.py
